Merges n.m.monster to 1.8.